--- a/templates/home.html
+++ b/templates/home.html
@@ -2,52 +2,35 @@
 <html>
   <head>
     <title>Jovian Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color:rgb(50, 50, 50);
-        text-align: center;
-      }
-
       #banner {
+        height: 360px;
         width: 100%;
-        height: 320px;
-        object-fit: cover;
-      }
-
-      h2 {
-        font-size: 32;
-        font-family: Roboto;
-        font-weight: normal;
-        color:rgb(100, 100, 100);
-        text-align: center;
-      }
-
-      .bodytext {
-        font-family: Roboto;
-        color:rgb(80, 80, 80);
-      }
-
-      #container {
-        max-width: 720px;
-        margin: 0 auto 0 auto; 
+        object-fit:cover;
+        margin-bottom: 16px;
       }
     </style>
   <head>  
   <body>
-    <div id="container">
-      <h1>Jovian Careers</h1>
-      <img id="banner" src="https://test-website.vinodvidhole.repl.co/static/banner.jpeg">
-      <h2>About Jovian</h2>
-      <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Libero id faucibus nisl tincidunt eget nullam non nisi est. Cras adipiscing enim eu turpis egestas pretium aenean. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Eget gravida cum sociis natoque penatibus et magnis. Sed augue lacus viverra vitae congue eu consequat ac felis. Nibh nisl condimentum id venenatis a condimentum vitae sapien. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Lectus proin nibh nisl condimentum id venenatis a condimentum. Duis convallis convallis tellus id interdum velit laoreet id donec. Et magnis dis parturient montes nascetur. Massa tincidunt dui ut ornare.
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">{{companyname}} Careers</h1>
+      <img class="img-fluid" id="banner" src="https://test-website.vinodvidhole.repl.co/static/banner.jpeg">
+      <h2 class="text-center mt-2 mb-4">About Jovian</h2>
+      <p class="lead">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Libero id faucibus nisl tincidunt eget nullam non nisi est. Cras adipiscing enim eu turpis egestas pretium aenean. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Eget gravida cum sociis natoque penatibus et magnis. Sed augue lacus viverra vitae congue eu consequat ac felis. Nibh nisl condimentum id venenatis a condimentum vitae sapien.
       </p>
-      <h2>Open Positions</h2>
-      <p class="bodytext">TODO -Show the jobs here</p>
-      <div style="text-align:center;"> 
-        <button>Contact Us</button>
-          <p>Copyright 2022, Jovian</p>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
+      <div class="text-center"> 
+        <button class="btn btn-primary btn-lg">Contact Us</button>
+          <p class="mt-4">Copyright 2022, Jovian</p>
       </div>  
     </div>
   </body>
