made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
       <p class="lead">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Libero id faucibus nisl tincidunt eget nullam non nisi est. Cras adipiscing enim eu turpis egestas pretium aenean. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Eget gravida cum sociis natoque penatibus et magnis. Sed augue lacus viverra vitae congue eu consequat ac felis. Nibh nisl condimentum id venenatis a condimentum vitae sapien.
       </p>
-      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <h2 class="text-center mt-2 mb-4">Job Openings</h2>
       <div>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
