--- a/templates/home.html
+++ b/templates/home.html
@@ -15,23 +15,31 @@
     </style>
   <head>  
   <body>
+    {% include 'nav.html' %}
+    <img class="img-fluid" id="banner" src="https://test-website.vinodvidhole.repl.co/static/banner.jpeg">
     <div class="container">
-      <h1 class="text-center mt-2 mb-4">{{companyname}} Careers</h1>
-      <img class="img-fluid" id="banner" src="https://test-website.vinodvidhole.repl.co/static/banner.jpeg">
-      <h2 class="text-center mt-2 mb-4">About Jovian</h2>
+      <h1 class="text-center mt-2 mb-4">
+        {{company_name}} Careers
+      </h1>
+        <div class="row" style="margin-bottom:32px">
+        <div class="col-md-6">
       <p class="lead">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Libero id faucibus nisl tincidunt eget nullam non nisi est. Cras adipiscing enim eu turpis egestas pretium aenean. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Eget gravida cum sociis natoque penatibus et magnis. Sed augue lacus viverra vitae congue eu consequat ac felis. Nibh nisl condimentum id venenatis a condimentum vitae sapien.
       </p>
+        </div>
+         <div class="d-none d-md-block col-md-6">
+         <img src="/static/people.jpg" style="height:320px;border-radius:4px;">
+      </div>
       <h2 class="text-center mt-2 mb-4">Job Openings</h2>
       <div>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
         {% endfor %}
       </div>
-      <div class="text-center"> 
-        <button class="btn btn-primary btn-lg">Contact Us</button>
-          <p class="mt-4">Copyright 2022, Jovian</p>
+      <div class="text-center">
+      <a class="btn btn-primary btn-lg" href="mailto:hello@jovian.ai?subject=Question%20about%20Job%20Opernings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20questions%3A%20%3Center%20question%20here%3E%0D%0A">Contact Us</a>
       </div>  
     </div>
+    {% include 'footer.html' %}
   </body>
 </html>
