--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar shadow-sm fixed-top bg-white">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <!--href / in below indicate that upon clicking go to home -->
+    <a class="navbar-brand" href="/">
       <img src="/static/logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
       Jovian
     </a>
